# ax-cli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
skills/ax-cli/: SKILL.md
skills/axcli/: SKILL.md
src/: capture.rs  cli.rs  error.rs  main.rs
src/ax/: actions.rs  app.rs  attributes.rs  catalog.rs  element.rs  mod.rs  mutation.rs  observer.rs  parameterized.rs  tree.rs
src/output/: json_fmt.rs  mod.rs  plain_fmt.rs  tree_fmt.rs
