[package]
name = "ax"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
description = "macOS Accessibility Inspector CLI — inspect UI hierarchies, attributes, and actions from the terminal"
license = "MIT"
repository = "https://github.com/watzon/macos-ax-cli"
keywords = ["macos", "accessibility", "cli", "inspector", "a11y"]
categories = ["command-line-utilities", "os::macos-apis", "accessibility"]

[dependencies]
accessibility = "0.2"
accessibility-sys = "0.2"
base64 = "0.22"
core-foundation = "0.10"
core-foundation-sys = "0.8"
cocoa = "0.26"
jpeg-encoder = "0.6"
objc = "0.2"
clap = { version = "4", features = ["derive"] }
png = "0.17"
screencapturekit = { version = "1.5.4", features = ["macos_15_2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
thiserror = "2"

[lints.clippy]
all = "warn"
